--- a/components/button/button.module.scss
+++ b/components/button/button.module.scss
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: .75rem;
     width: fit-content;
     padding: .75rem 2.5rem;
     border-radius: clamp(.25rem, .5vw, .425rem);
@@ -28,6 +29,17 @@
         }
     }
 
+    &.isTransparent {
+        background-color: transparent;
+        color: $black;
+        border: 1px solid transparent;
+
+        &:hover {
+            border: 1px solid $black;
+            color: $black;
+        }
+    }
+
     &.isCentered {
         @media #{$mq-md-min} {
             margin-left: auto;
@@ -35,7 +47,9 @@
         }
     }
 
-    .content {
-        transition: .3s ease-in-out;
+    svg {
+        width: 1rem;
+        min-width: 1rem;
+        height: 1rem;
     }
 }
