--- a/pages/home.module.scss
+++ b/pages/home.module.scss
@@ -1,3 +1,217 @@
+.banner {
+    .image {
+        position: relative;
+        overflow: hidden;
+        display: block;
+        width: calc(100% + 4rem);
+        height: 70vw;
+        margin-left: -2rem;
+
+        @media #{$mq-sm-min} {
+            margin: 0;
+            width: 100%;
+            height: 30rem;
+        }
+    }
+
+    .inner {
+        margin: calc(var(--big) * -1) auto 0 auto;
+
+        @media #{$mq-sm-min} {
+            width: 95%;
+        }
+
+        @media #{$mq-lg-min} {
+            width: 85%;
+        }
+        
+        .titleBlock {
+            position: relative;
+            z-index: 2;
+            background-color: $white;
+            padding: var(--smallest) var(--smallest) 0 var(--smallest);
+
+            @media #{$mq-sm-min} {
+                padding: var(--smaller) var(--smaller) 0 var(--smaller);
+            }
+
+            @media #{$mq-md-min} {
+                width: 90%;
+            }
+
+            @media #{$mq-lg-min} {
+                width: 75%;
+            }
+
+            p {
+                display: block;
+                margin-top: 1rem;
+
+                @media #{$mq-md-min} {
+                    margin-top: var(--smallest);
+                }
+            }
+        }
+
+        .list {
+            margin-top: var(--smaller);
+            padding: 0 var(--smaller);
+
+            @media #{$mq-md-min} {
+                display: flex;
+                flex-wrap: wrap;
+                column-gap: 2rem;
+            }
+
+            li {
+                @media #{$mq-md-min} {
+                    width: calc(50% - 1rem);
+                }
+
+                &.last {
+                    @media #{$mq-md-max} {
+                        display: none;
+                    }
+                }
+                
+                a {
+                    position: relative;
+                    display: block;
+                    padding: 1rem 0 1rem 2.5rem;
+                    transition: .3s ease-in-out;
+
+                    .arrow {
+                        position: absolute;
+                        top: 50%;
+                        right: calc(100% - 1.5rem);
+                        transform: translateY(-50%);
+                        transition: right .3s ease-in-out;
+                    }
+
+                    &:hover {
+                        background-color: $green;
+                        padding-left: 1rem;
+
+                        .arrow {
+                            right: 1rem;
+
+                            svg {
+                                transform: translateX(150%);
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.counters {
+    .block {
+        background-color: $beige;
+        display: flex;
+        flex-direction: column;
+        padding: var(--smallest);
+        margin: .25rem 0;
+
+        @media #{$mq-lg-min} {
+            margin: 0;
+            padding: var(--smaller) var(--smallest);
+            height: 100%;
+        }
+
+        p {
+            line-height: 1.2;
+        }
+    }
+}
+
+.featuredNews {
+    .inner {
+        @media #{$mq-sm-min} {
+            position: relative;
+            display: flex;
+            justify-content: flex-end;
+        }
+
+        .image {
+            position: relative;
+            z-index: 0;
+            overflow: hidden;
+            display: block;
+            width: calc(100% + 4rem);
+            height: 100vw;
+            margin-left: -2rem;
+
+            @media #{$mq-xs-min} {
+                height: 80vw;
+            }
+
+            @media #{$mq-sm-min} {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 50%;
+                height: 100%;
+                margin: 0;
+                border-radius: .25rem;
+            }
+        }
+
+        .yellowBlock {
+            position: relative;
+            z-index: 2;
+            padding: var(--smaller);
+            background-color: $beige;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            margin-top: calc(var(--small) * -1);
+            border-radius: .25rem;
+            transition: .3s ease-in-out;
+
+            @media #{$mq-sm-min} {
+                width: 70%;
+                margin: var(--medium) 0;
+            }
+
+            @media #{$mq-md-min} {
+                width: 60%;
+            }
+
+            @media #{$mq-lg-min} {
+                padding-right: var(--medium);
+            }
+
+            @media #{$mq-xl-min} {
+                padding-right: var(--big);
+                margin: var(--big) 0;
+            }
+
+            &:hover {
+                transform: translateY(-.5rem);
+                box-shadow: 0 1rem 2rem 0 rgba(0, 0, 0, .1), inset 0 0 0 1px $black;
+        
+                .arrow {
+                    svg {
+                        transform: translateX(150%);
+                    }
+                }
+            }
+        }
+    }
+}
+
+.featuredLinks {
+    a {
+        margin-bottom: 1rem;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+}
+
 .news {
     .slider {
         margin: var(--smallest) 0;
@@ -7,12 +221,8 @@
             .swiper-slide {
                 height: auto;
 
-                > div {
+                a {
                     height: 100%;
-
-                    a {
-                        height: 100%;
-                    }
                 }
             }
         }
