--- a/components/menu/menu.module.scss
+++ b/components/menu/menu.module.scss
@@ -76,7 +76,7 @@
 
                 &:hover {
                     .icon {
-                        > span {
+                        .line {
                             &:first-child {
                                 top: calc(100% - 1px);
                             }
@@ -107,7 +107,7 @@
                     }
 
                     .icon {
-                        > span {
+                        .line {
                             &:first-child {
                                 transform: translateX(150%);
                                 transition-delay: .2s;
@@ -164,7 +164,7 @@
                     width: 1.25rem;
                     height: calc(.8125rem + 2px);
 
-                    > span {
+                    .line {
                         width: 100%;
                         height: 1px;
                         border-radius: 1px;
